fixed sticky and header alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -2737,7 +2737,7 @@ footer .twc-bc-footer {
 .sticky {
   position: -webkit-sticky;
   position: sticky;
-  top: 181px; }
+  top: 171px; }
   .sticky:before, .sticky:after {
     content: '';
     display: table; }
