--- a/src/css/scss/features/_styleguide.scss
+++ b/src/css/scss/features/_styleguide.scss
@@ -392,7 +392,7 @@
   .sticky {
     position: -webkit-sticky;
     position: sticky;
-    top: 181px;
+    top: 171px;
 
     &:before,
     &:after {
